# IncidentIQ

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  UI_PREVIEW.md  VALIDATION_STATUS.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  Dockerfile  __init__.py  alembic.ini  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.dev.txt  requirements.txt  ruff.toml
backend/app/: main.py
backend/app/agents/: __init__.py  context_agent.py  knowledge_agent.py  llm.py  rca_agent.py  state.py  supervisor.py  triage_agent.py
backend/app/api/middleware/: auth.py  logging.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: alerts.py  auth.py  health.py  incidents.py  integrations.py  knowledge.py  metrics.py  remediation.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/cost/: __init__.py  infrastructure_tracker.py  llm_tracker.py
backend/app/db/: __init__.py  postgres.py  redis.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 56e977b4770e_initial_schema.py
backend/app/events/: __init__.py  consumer.py  producer.py  schemas.py
backend/app/events/handlers/: __init__.py  alert_handler.py  incident_handler.py  remediation_handler.py
backend/app/features/: __init__.py  config.py  flags.py
backend/app/integrations/: __init__.py  github.py  hub.py  kubernetes.py  pagerduty.py  prometheus.py  slack.py  terraform.py
backend/app/ml/: __init__.py  alert_correlator.py  anomaly_detector.py  predictor.py
backend/app/models/: enums.py
backend/app/models/database/: __init__.py  alert.py  base.py  incident.py  knowledge_doc.py  remediation_log.py  user.py
backend/app/models/schemas/: __init__.py  alert.py  approval.py  auth.py  incident.py  knowledge.py  remediation.py
backend/app/observability/: logging.py  metrics.py  tracing.py
backend/app/rag/: chunker.py  embeddings.py  prompts.py  retriever.py  vector_store.py
backend/app/remediation/: __init__.py  approval_flow.py  executor.py
backend/app/remediation/actions/: __init__.py  restart.py  rollback.py  scale.py  terraform_apply.py
backend/app/security/: __init__.py  auth.py  input_validation.py  rate_limit.py
backend/app/services/: __init__.py  alert_service.py  incident_service.py  knowledge_service.py  remediation_service.py
backend/app/utils/: circuit_breaker.py  cost_tracker.py  helpers.py  rate_limiter.py
backend/app/workers/: anomaly_detector_job.py  knowledge_indexer.py  log_processor.py  metric_ingestor.py
backend/data/: sample_alerts.json
backend/data/postmortems/: checkout_incident_2024.md
backend/data/runbooks/: deployment_rollback.md  high_latency.md  oom_errors.md
backend/tests/: conftest.py  pytest.ini  test_api_flow.py  test_rag.py  test_services.py
backend/tests/test_agents/: test_supervisor.py
backend/tests/test_security/: test_auth.py  test_rate_limiter.py
docs/: ONBOARDING.md  PRODUCTIZATION.md  agent_workflows.md  architecture.md  backend_local_setup.md  cost-optimization.md  demo_scenarios.md  deployment.md  security.md
docs/api/: openapi.yaml
frontend/: .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  preview.html  tsconfig.json  vitest.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ui.tsx
frontend/src/components/common/: Button.tsx  Card.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx
frontend/src/components/dashboard/: AlertsDashboard.tsx  AnomalyChart.tsx  IncidentTimeline.tsx
frontend/src/components/incidents/: ApprovalButton.tsx  RCAViewer.tsx  RemediationCard.tsx  __init__.ts
frontend/src/hooks/: useAlerts.ts  useApi.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  IncidentDetailPage.tsx  IncidentsPage.tsx  KnowledgePage.tsx  LoginPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
infra/: docker-compose.yml
infra/helm/ai-sre-platform/: Chart.yaml  values.yaml
infra/kubernetes/base/: ingress.yaml  namespace.yaml
infra/kubernetes/base/backend/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
infra/kubernetes/base/frontend/: deployment.yaml  service.yaml
infra/kubernetes/base/prometheus/: configmap.yaml  deployment.yaml  rbac.yaml  service.yaml
infra/kubernetes/base/workers/: deployment.yaml
infra/kubernetes/overlays/dev/: kustomization.yaml
infra/terraform/: main.tf  outputs.tf  provider.tf  variables.tf
monitoring/langsmith/: config.yaml
monitoring/otel/: otel-collector-config.yaml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: anomaly_alerts.yml  system_alerts.yml
monitoring/prometheus/targets/: scrape_configs.yml
scripts/: check_integrations.py  create_admin.py  seed_knowledge.py  setup_local.sh  simulate_alerts.py  test_remediation.sh  validate_structure.py
(+24 files in other folders)
